--- a/Booking/src/main/webapp/WEB-INF/web.xml
+++ b/Booking/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,26 @@
     <listener>
         <listener-class>com.booking.controller.ApplicationStartListener</listener-class>
     </listener>
+
+    <servlet>
+        <servlet-name>MainPageServlet</servlet-name>
+        <servlet-class>com.booking.controller.MainPageServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>MainPageServlet</servlet-name>
+        <url-pattern>/index.html</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>com.booking.controller.LoginServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login.html</url-pattern>
+    </servlet-mapping>
     
     <servlet>
         <servlet-name>UserListServlet</servlet-name>
