--- a/Booking/src/main/webapp/WEB-INF/web.xml
+++ b/Booking/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         <url-pattern>/index.html</url-pattern>
     </servlet-mapping>
 
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
+
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>com.booking.controller.LoginServlet</servlet-class>
@@ -110,8 +114,4 @@
         <param-name>jdbc-password</param-name>
         <param-value>asaa220708</param-value>
     </context-param>
-
-    <welcome-file-list>
-        <welcome-file>login.html</welcome-file>
-    </welcome-file-list>
 </web-app>
