--- a/Booking/src/main/webapp/WEB-INF/web.xml
+++ b/Booking/src/main/webapp/WEB-INF/web.xml
@@ -12,88 +12,9 @@
     <display-name>Web Application Booking</display-name>
     <request-character-encoding>UTF-8</request-character-encoding>
 
-    <filter>
-        <filter-name>EncodingFilter</filter-name>
-        <filter-class>com.booking.controller.EncodingFilter</filter-class>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
-        </init-param>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>EncodingFilter</filter-name>
-        <url-pattern>*.html</url-pattern>
-    </filter-mapping>
-
     <listener>
         <listener-class>com.booking.controller.ApplicationStartListener</listener-class>
     </listener>
-
-    <servlet>
-        <servlet-name>MainPageServlet</servlet-name>
-        <servlet-class>com.booking.controller.MainPageServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>MainPageServlet</servlet-name>
-        <url-pattern>/index.html</url-pattern>
-    </servlet-mapping>
-
-    <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
-
-    <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>com.booking.controller.LoginServlet</servlet-class>
-    </servlet>
-    
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/login.html</url-pattern>
-    </servlet-mapping>
-    
-    <servlet>
-        <servlet-name>UserListServlet</servlet-name>
-        <servlet-class>com.booking.controller.user.UserListServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>UserListServlet</servlet-name>
-        <url-pattern>/user/list.html</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>UserEditServlet</servlet-name>
-        <servlet-class>com.booking.controller.user.UserEditServlet</servlet-class>
-    </servlet>
-    
-    <servlet-mapping>
-        <servlet-name>UserEditServlet</servlet-name>
-        <url-pattern>/user/edit.html</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>UserSaveServlet</servlet-name>
-        <servlet-class>com.booking.controller.user.UserSaveServlet</servlet-class>
-    </servlet>
-    
-    <servlet-mapping>
-        <servlet-name>UserSaveServlet</servlet-name>
-        <url-pattern>/user/save.html</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>UserDeleteServlet</servlet-name>
-        <servlet-class>com.booking.controller.user.UserDeleteServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>UserDeleteServlet</servlet-name>
-        <url-pattern>/user/delete.html</url-pattern>
-    </servlet-mapping>
-
 
     <context-param>
         <param-name>jdbc-driver</param-name>
@@ -114,4 +35,39 @@
         <param-name>jdbc-password</param-name>
         <param-value>asaa220708</param-value>
     </context-param>
+
+    <servlet>
+        <servlet-name>DispatcherServlet</servlet-name>
+        <servlet-class>com.booking.controller.servlet.auxiliary.DispatcherServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DispatcherServlet</servlet-name>
+        <url-pattern>*.html</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>com.booking.controller.filter.EncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>*.html</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>com.booking.controller.filter.SecurityFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>*.html</url-pattern>
+    </filter-mapping>
+
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
 </web-app>
